fixed line height on smaller screens

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -18,7 +18,6 @@ body {
   background-color: var(--background);
   color: var(--text);
   font-size: 16px;
-  line-height: 150%;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
